# CuckyGameEngine

./: .gitignore  CMakeLists.txt  CuckyGameEngine.pc.in  CuckyGameEngineConfig.cmake.in  LICENSE  Makefile.sample  README.md  Sample.cpp  SampleProgram.cpp
include/CGE/: Core.h  CuckyGameEngine.h  Error.h  Math.h  Render.h
sample/generic/: CMakeLists.txt  Main.cpp  Sample.cpp
sample_src/: Sample.cpp
src/: CMakeLists.txt
src/CGE/: Core.cpp  Core.h  CuckyGameEngine.cpp  CuckyGameEngine.h  Error.cpp  Error.h  Math.cpp  Math.h  Render.cpp  Render.h
src/CGE/GLFW/: Core.cpp  Core.h  Render.cpp  Render.h
src/CGE/OpenGL/: Core.cpp  Core.h  Render.cpp  Render.h
src/CGE/SDL2/: Core.cpp  Core.h  Render.cpp  Render.h
